src/objects/Approval_Inbound_Email__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Comment__c</fullName>
        <label>Approval Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Request</label>
        <referenceTo>Apttus_Approval__Approval_Request__c</referenceTo>
        <relationshipLabel>Approval Inbound Emails</relationshipLabel>
        <relationshipName>Approval_Inbound_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Actual_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apttus Actual Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Inbound_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approver_Comments__c</fullName>
        <label>Apttus Approver Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Received_Date_Time__c</fullName>
        <label>Email Received Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Received_Date__c</fullName>
        <formula>DATEVALUE( Email_Received_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Email_Body__c</fullName>
        <label>Full Email Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Approval Inbound Email</label>
    <nameField>
        <displayFormat>AIE-{00000}</displayFormat>
        <label>Approval Inbound Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Inbound Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>